--- a/names.css
+++ b/names.css
@@ -1,8 +1,16 @@
-#generator {
-    text-align:left;
-    padding:15px;
-    border:1px dashed #333;
+body, .container {
     background-color:#eee;
+    background-color: #f5f5f5;
+}
+#generator {
+    text-align:center;
+    padding:15px;
+    background-color: #fff;
+    padding: 40px 0 60px;
+    font-size: 18px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    z-index: 1;
 }
 
 #result {
